finished the implementation for all the app